fixing spacing on about page

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ ul {
   padding: 25px;
   font-size: 1.3em;
   font-weight: 600;
-  width: 75%;
+  width: 90%;
   justify-content: center;
 }
 .contact-email {
